# untrodden-valley

./: .editorconfig  .gitignore  .rustfmt.toml  .taplo.toml  flake.nix
ac/: compete.toml
ac/agc064/: Cargo.toml
ac/agc064/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
atcoder/: compete.toml
atcoder/abc297/: Cargo.toml
cf/: compete.toml
cf/1797/testcases/: a.yml  d.yml  f.yml
cf/1811/: Cargo.toml
cf/1811/testcases/: a.yml  c.yml  d.yml  g1.yml
cf/1814/: Cargo.toml
cf/1814/testcases/: a.yml  c.yml
cf/1815/: Cargo.toml
cf/1815/testcases/: c.yml  f.yml
cf/1817/testcases/: a.yml  b.yml  c.yml  e.yml
cf/1818/testcases/: c.yml  f.yml
cf/1820/: Cargo.toml
cf/1820/testcases/: c.yml  d.yml
cf/1821/: Cargo.toml
cf/1821/testcases/: a.yml  c.yml  d.yml  e.yml  f.yml
cf/1822/: Cargo.toml
cf/1822/testcases/: a.yml  c.yml  e.yml  f.yml  g1.yml  g2.yml
cf/1823/testcases/: f.yml
cf/1824/: Cargo.toml
cf/1824/testcases/: a.yml  b2.yml  c.yml  d.yml  e.yml
cf/1825/testcases/: a.yml  b.yml  c.yml  e.yml
cf/1826/: Cargo.toml
cf/1826/testcases/: a.yml  c.yml  d.yml
cf/1827/: .neoconf.json  input.txt
cf/1827/testcases/: a.yml  b1.yml  d.yml  e.yml  f.yml
cf/1828/: Cargo.toml
cf/1828/testcases/: d2.yml  e.yml
cf/1829/: Cargo.toml
cf/1829/testcases/: b.yml  g.yml  h.yml
cf/1829/testcases/e/in/: 1.txt
cf/1830/testcases/: a.yml  b.yml  c.yml  d.yml
cf/1831/: Cargo.toml
cf/1831/testcases/: d.yml  e.yml  f.yml
cf/1832/: Cargo.toml
cf/1832/testcases/: a.yml  b.yml  c.yml  d1.yml  d2.yml
cf/1832/testcases/d1/in/: 1.txt
cf/1833/: Cargo.toml
cf/1833/testcases/: b.yml  c.yml  d.yml  e.yml  f.yml
cf/1838/testcases/: a.yml  b.yml  c.yml  e.yml
cf/1839/: Cargo.toml
cf/1839/testcases/: a.yml
cf/1840/testcases/: a.yml  b.yml  g1.yml  g2.yml
cf/1850/: Cargo.toml
cf/1850/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml  g.yml  h.yml
cf/1853/: Cargo.toml
cf/1853/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
cf/1857/: Cargo.toml
cf/1857/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml  g.yml
cf/1858/: Cargo.toml
cf/1858/testcases/: a.yml  b.yml  c.yml  d.yml  e1.yml  e2.yml
cf/1860/: Cargo.toml
cf/1860/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml
cf/1864/: Cargo.toml
cf/1864/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml  f.yml  g.yml  h.yml  i.yml
codeforces/: compete.toml
codeforces/1797/: Cargo.toml
codeforces/1797/testcases/: b.yml  c.yml  e.yml
codeforces/1811/testcases/: b.yml  e.yml  f.yml  g2.yml
codeforces/1811/testcases/f/in/: 4.txt
codeforces/1814/testcases/: b.yml  d.yml  e.yml  f.yml
codeforces/1814/testcases/f/in/: 1.txt
codeforces/1815/testcases/: a.yml  b.yml  d.yml  e.yml
codeforces/1817/: Cargo.toml
codeforces/1817/testcases/: d.yml
codeforces/1818/: Cargo.toml
codeforces/1818/testcases/: a.yml  b.yml  d.yml  e.yml
codeforces/1820/testcases/: a.yml  b.yml  e.yml  f.yml
codeforces/1821/: editorial-e
codeforces/1821/testcases/: b.yml
codeforces/1822/testcases/: b.yml  d.yml
codeforces/1823/: Cargo.toml
codeforces/1823/testcases/: a.yml  b.yml  c.yml  d.yml  e.yml
codeforces/1824/testcases/: b1.yml
codeforces/1825/: Cargo.toml
codeforces/1825/testcases/: d1.yml  d2.yml
codeforces/1826/testcases/: b.yml  e.yml  f.yml
codeforces/1827/: .neoconf.json  Cargo.toml  compare.sh
codeforces/1827/testcases/: b2.yml  c.yml
codeforces/1828/testcases/: a.yml  b.yml  c.yml  d1.yml  f.yml
codeforces/1829/testcases/: a.yml  c.yml  d.yml  e.yml  f.yml
codeforces/1830/: Cargo.toml
codeforces/1830/testcases/: e.yml  f.yml
codeforces/1831/testcases/: a.yml  b.yml  c.yml
codeforces/1832/testcases/: e.yml  f.yml
codeforces/1832/testcases/d1/in/: 2.txt
codeforces/1833/: .neoconf.json
codeforces/1833/testcases/: a.yml  g.yml
codeforces/1838/: Cargo.toml
codeforces/1838/testcases/: d.yml  f.yml
codeforces/1839/testcases/: b.yml  c.yml  d.yml  e.yml
codeforces/1840/: Cargo.toml
codeforces/1840/testcases/: c.yml  d.yml  e.yml  f.yml
cp/: Cargo.toml
cp/src/: cio.rs  cmp.rs  io.rs  io_test.rs  lib.rs  mut_num.rs  num.rs  segment_tree.rs
pkg/cargo-compete/: cargo-compete.patch
