[package]
name = "contest1814"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1814-a = { alias = "a", problem = "https://codeforces.com/contest/1814/problem/A" }
contest1814-b = { alias = "b", problem = "https://codeforces.com/contest/1814/problem/B" }
contest1814-c = { alias = "c", problem = "https://codeforces.com/contest/1814/problem/C" }
contest1814-d = { alias = "d", problem = "https://codeforces.com/contest/1814/problem/D" }
contest1814-e = { alias = "e", problem = "https://codeforces.com/contest/1814/problem/E" }
contest1814-f = { alias = "f", problem = "https://codeforces.com/contest/1814/problem/F" }

[[bin]]
name = "contest1814-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1814-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1814-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1814-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1814-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1814-f"
path = "src/bin/f.rs"

[dependencies]

[dev-dependencies]
