[package]
name = "contest1815"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1815-a = { alias = "a", problem = "https://codeforces.com/contest/1815/problem/A" }
contest1815-b = { alias = "b", problem = "https://codeforces.com/contest/1815/problem/B" }
contest1815-c = { alias = "c", problem = "https://codeforces.com/contest/1815/problem/C" }
contest1815-d = { alias = "d", problem = "https://codeforces.com/contest/1815/problem/D" }
contest1815-e = { alias = "e", problem = "https://codeforces.com/contest/1815/problem/E" }
contest1815-f = { alias = "f", problem = "https://codeforces.com/contest/1815/problem/F" }

[[bin]]
name = "contest1815-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1815-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1815-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1815-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1815-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1815-f"
path = "src/bin/f.rs"

[dependencies]

[dev-dependencies]
