[package]
name = "contest1822"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1822-a = { alias = "a", problem = "https://codeforces.com/contest/1822/problem/A" }
contest1822-b = { alias = "b", problem = "https://codeforces.com/contest/1822/problem/B" }
contest1822-c = { alias = "c", problem = "https://codeforces.com/contest/1822/problem/C" }
contest1822-d = { alias = "d", problem = "https://codeforces.com/contest/1822/problem/D" }
contest1822-e = { alias = "e", problem = "https://codeforces.com/contest/1822/problem/E" }
contest1822-f = { alias = "f", problem = "https://codeforces.com/contest/1822/problem/F" }
contest1822-g1 = { alias = "g1", problem = "https://codeforces.com/contest/1822/problem/G1" }
contest1822-g2 = { alias = "g2", problem = "https://codeforces.com/contest/1822/problem/G2" }

[[bin]]
name = "contest1822-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1822-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1822-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1822-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1822-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1822-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1822-g1"
path = "src/bin/g1.rs"

[[bin]]
name = "contest1822-g2"
path = "src/bin/g2.rs"

[dependencies]

[dev-dependencies]
