[package]
name = "contest1824"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1824-a = { alias = "a", problem = "https://codeforces.com/contest/1824/problem/A" }
contest1824-b1 = { alias = "b1", problem = "https://codeforces.com/contest/1824/problem/B1" }
contest1824-b2 = { alias = "b2", problem = "https://codeforces.com/contest/1824/problem/B2" }
contest1824-c = { alias = "c", problem = "https://codeforces.com/contest/1824/problem/C" }
contest1824-d = { alias = "d", problem = "https://codeforces.com/contest/1824/problem/D" }
contest1824-e = { alias = "e", problem = "https://codeforces.com/contest/1824/problem/E" }

[[bin]]
name = "contest1824-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1824-b1"
path = "src/bin/b1.rs"

[[bin]]
name = "contest1824-b2"
path = "src/bin/b2.rs"

[[bin]]
name = "contest1824-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1824-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1824-e"
path = "src/bin/e.rs"

[dependencies]

[dev-dependencies]
