[package]
name = "contest1826"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1826-a = { alias = "a", problem = "https://codeforces.com/contest/1826/problem/A" }
contest1826-b = { alias = "b", problem = "https://codeforces.com/contest/1826/problem/B" }
contest1826-c = { alias = "c", problem = "https://codeforces.com/contest/1826/problem/C" }
contest1826-d = { alias = "d", problem = "https://codeforces.com/contest/1826/problem/D" }
contest1826-e = { alias = "e", problem = "https://codeforces.com/contest/1826/problem/E" }
contest1826-f = { alias = "f", problem = "https://codeforces.com/contest/1826/problem/F" }

[[bin]]
name = "contest1826-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1826-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1826-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1826-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1826-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1826-f"
path = "src/bin/f.rs"

[dependencies]

[dev-dependencies]
