[package]
name = "contest1829"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1829-a = { alias = "a", problem = "https://codeforces.com/contest/1829/problem/A" }
contest1829-b = { alias = "b", problem = "https://codeforces.com/contest/1829/problem/B" }
contest1829-c = { alias = "c", problem = "https://codeforces.com/contest/1829/problem/C" }
contest1829-d = { alias = "d", problem = "https://codeforces.com/contest/1829/problem/D" }
contest1829-e = { alias = "e", problem = "https://codeforces.com/contest/1829/problem/E" }
contest1829-f = { alias = "f", problem = "https://codeforces.com/contest/1829/problem/F" }
contest1829-g = { alias = "g", problem = "https://codeforces.com/contest/1829/problem/G" }
contest1829-h = { alias = "h", problem = "https://codeforces.com/contest/1829/problem/H" }

[[bin]]
name = "contest1829-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1829-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1829-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1829-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1829-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1829-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1829-g"
path = "src/bin/g.rs"

[[bin]]
name = "contest1829-h"
path = "src/bin/h.rs"

[dependencies]

[dev-dependencies]
