[package]
name = "contest1831"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1831-a = { alias = "a", problem = "https://codeforces.com/contest/1831/problem/A" }
contest1831-b = { alias = "b", problem = "https://codeforces.com/contest/1831/problem/B" }
contest1831-c = { alias = "c", problem = "https://codeforces.com/contest/1831/problem/C" }
contest1831-d = { alias = "d", problem = "https://codeforces.com/contest/1831/problem/D" }
contest1831-e = { alias = "e", problem = "https://codeforces.com/contest/1831/problem/E" }
contest1831-f = { alias = "f", problem = "https://codeforces.com/contest/1831/problem/F" }

[[bin]]
name = "contest1831-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1831-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1831-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1831-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1831-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1831-f"
path = "src/bin/f.rs"

[dependencies]

[dev-dependencies]
