[package]
name = "contest1833"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1833-a = { alias = "a", problem = "https://codeforces.com/contest/1833/problem/A" }
contest1833-b = { alias = "b", problem = "https://codeforces.com/contest/1833/problem/B" }
contest1833-c = { alias = "c", problem = "https://codeforces.com/contest/1833/problem/C" }
contest1833-d = { alias = "d", problem = "https://codeforces.com/contest/1833/problem/D" }
contest1833-e = { alias = "e", problem = "https://codeforces.com/contest/1833/problem/E" }
contest1833-f = { alias = "f", problem = "https://codeforces.com/contest/1833/problem/F" }
contest1833-g = { alias = "g", problem = "https://codeforces.com/contest/1833/problem/G" }

[[bin]]
name = "contest1833-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1833-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1833-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1833-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1833-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1833-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1833-g"
path = "src/bin/g.rs"

[dependencies]

[dev-dependencies]
