[package]
name = "contest1839"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1839-a = { alias = "a", problem = "https://codeforces.com/contest/1839/problem/A" }
contest1839-b = { alias = "b", problem = "https://codeforces.com/contest/1839/problem/B" }
contest1839-c = { alias = "c", problem = "https://codeforces.com/contest/1839/problem/C" }
contest1839-d = { alias = "d", problem = "https://codeforces.com/contest/1839/problem/D" }
contest1839-e = { alias = "e", problem = "https://codeforces.com/contest/1839/problem/E" }

[[bin]]
name = "contest1839-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1839-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1839-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1839-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1839-e"
path = "src/bin/e.rs"

[dependencies]

[dev-dependencies]
