[package]
name = "contest1850"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1850-a = { alias = "a", problem = "https://codeforces.com/contest/1850/problem/A" }
contest1850-b = { alias = "b", problem = "https://codeforces.com/contest/1850/problem/B" }
contest1850-c = { alias = "c", problem = "https://codeforces.com/contest/1850/problem/C" }
contest1850-d = { alias = "d", problem = "https://codeforces.com/contest/1850/problem/D" }
contest1850-e = { alias = "e", problem = "https://codeforces.com/contest/1850/problem/E" }
contest1850-f = { alias = "f", problem = "https://codeforces.com/contest/1850/problem/F" }
contest1850-g = { alias = "g", problem = "https://codeforces.com/contest/1850/problem/G" }
contest1850-h = { alias = "h", problem = "https://codeforces.com/contest/1850/problem/H" }

[[bin]]
name = "contest1850-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1850-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1850-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1850-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1850-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1850-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1850-g"
path = "src/bin/g.rs"

[[bin]]
name = "contest1850-h"
path = "src/bin/h.rs"

[dependencies]
cp = { path = "../../cp" }

[dev-dependencies]
