[package]
name = "contest1857"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1857-a = { alias = "a", problem = "https://codeforces.com/contest/1857/problem/A" }
contest1857-b = { alias = "b", problem = "https://codeforces.com/contest/1857/problem/B" }
contest1857-c = { alias = "c", problem = "https://codeforces.com/contest/1857/problem/C" }
contest1857-d = { alias = "d", problem = "https://codeforces.com/contest/1857/problem/D" }
contest1857-e = { alias = "e", problem = "https://codeforces.com/contest/1857/problem/E" }
contest1857-f = { alias = "f", problem = "https://codeforces.com/contest/1857/problem/F" }
contest1857-g = { alias = "g", problem = "https://codeforces.com/contest/1857/problem/G" }

[[bin]]
name = "contest1857-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1857-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1857-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1857-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1857-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1857-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1857-g"
path = "src/bin/g.rs"

[dependencies]
cp = { path = "../../cp" }

[dev-dependencies]
