[package]
name = "contest1858"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1858-a = { alias = "a", problem = "https://codeforces.com/contest/1858/problem/A" }
contest1858-b = { alias = "b", problem = "https://codeforces.com/contest/1858/problem/B" }
contest1858-c = { alias = "c", problem = "https://codeforces.com/contest/1858/problem/C" }
contest1858-d = { alias = "d", problem = "https://codeforces.com/contest/1858/problem/D" }
contest1858-e1 = { alias = "e1", problem = "https://codeforces.com/contest/1858/problem/E1" }
contest1858-e2 = { alias = "e2", problem = "https://codeforces.com/contest/1858/problem/E2" }

[[bin]]
name = "contest1858-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1858-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1858-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1858-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1858-e1"
path = "src/bin/e1.rs"

[[bin]]
name = "contest1858-e2"
path = "src/bin/e2.rs"

[dependencies]
cp = { path = "../../cp" }

[dev-dependencies]
