[package]
name = "contest1860"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1860-a = { alias = "a", problem = "https://codeforces.com/contest/1860/problem/A" }
contest1860-b = { alias = "b", problem = "https://codeforces.com/contest/1860/problem/B" }
contest1860-c = { alias = "c", problem = "https://codeforces.com/contest/1860/problem/C" }
contest1860-d = { alias = "d", problem = "https://codeforces.com/contest/1860/problem/D" }
contest1860-e = { alias = "e", problem = "https://codeforces.com/contest/1860/problem/E" }
contest1860-f = { alias = "f", problem = "https://codeforces.com/contest/1860/problem/F" }

[[bin]]
name = "contest1860-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1860-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1860-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1860-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1860-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1860-f"
path = "src/bin/f.rs"

[dependencies]
cp = { path = "../../cp" }

[dev-dependencies]
