[package]
name = "contest1864"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1864-a = { alias = "a", problem = "https://codeforces.com/contest/1864/problem/A" }
contest1864-b = { alias = "b", problem = "https://codeforces.com/contest/1864/problem/B" }
contest1864-c = { alias = "c", problem = "https://codeforces.com/contest/1864/problem/C" }
contest1864-d = { alias = "d", problem = "https://codeforces.com/contest/1864/problem/D" }
contest1864-e = { alias = "e", problem = "https://codeforces.com/contest/1864/problem/E" }
contest1864-f = { alias = "f", problem = "https://codeforces.com/contest/1864/problem/F" }
contest1864-g = { alias = "g", problem = "https://codeforces.com/contest/1864/problem/G" }
contest1864-h = { alias = "h", problem = "https://codeforces.com/contest/1864/problem/H" }
contest1864-i = { alias = "i", problem = "https://codeforces.com/contest/1864/problem/I" }

[[bin]]
name = "contest1864-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1864-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1864-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1864-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1864-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1864-f"
path = "src/bin/f.rs"

[[bin]]
name = "contest1864-g"
path = "src/bin/g.rs"

[[bin]]
name = "contest1864-h"
path = "src/bin/h.rs"

[[bin]]
name = "contest1864-i"
path = "src/bin/i.rs"

[dependencies]
cp = { path = "../../cp" }

[dev-dependencies]
