[package]
name = "contest1797"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
contest1797-a = { alias = "a", problem = "https://codeforces.com/contest/1797/problem/A" }
contest1797-b = { alias = "b", problem = "https://codeforces.com/contest/1797/problem/B" }
contest1797-c = { alias = "c", problem = "https://codeforces.com/contest/1797/problem/C" }
contest1797-d = { alias = "d", problem = "https://codeforces.com/contest/1797/problem/D" }
contest1797-e = { alias = "e", problem = "https://codeforces.com/contest/1797/problem/E" }
contest1797-f = { alias = "f", problem = "https://codeforces.com/contest/1797/problem/F" }

[[bin]]
name = "contest1797-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1797-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1797-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1797-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1797-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1797-f"
path = "src/bin/f.rs"

[dependencies]

[dev-dependencies]
