[package]
name = "contest1818"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1818-a = { alias = "a", problem = "https://codeforces.com/contest/1818/problem/A" }
contest1818-b = { alias = "b", problem = "https://codeforces.com/contest/1818/problem/B" }
contest1818-c = { alias = "c", problem = "https://codeforces.com/contest/1818/problem/C" }
contest1818-d = { alias = "d", problem = "https://codeforces.com/contest/1818/problem/D" }
contest1818-e = { alias = "e", problem = "https://codeforces.com/contest/1818/problem/E" }
contest1818-f = { alias = "f", problem = "https://codeforces.com/contest/1818/problem/F" }

[[bin]]
name = "contest1818-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1818-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1818-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1818-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1818-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1818-f"
path = "src/bin/f.rs"

[dependencies]

[dev-dependencies]
