[package]
name = "contest1823"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1823-a = { alias = "a", problem = "https://codeforces.com/contest/1823/problem/A" }
contest1823-b = { alias = "b", problem = "https://codeforces.com/contest/1823/problem/B" }
contest1823-c = { alias = "c", problem = "https://codeforces.com/contest/1823/problem/C" }
contest1823-d = { alias = "d", problem = "https://codeforces.com/contest/1823/problem/D" }
contest1823-e = { alias = "e", problem = "https://codeforces.com/contest/1823/problem/E" }
contest1823-f = { alias = "f", problem = "https://codeforces.com/contest/1823/problem/F" }

[[bin]]
name = "contest1823-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1823-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1823-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1823-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1823-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1823-f"
path = "src/bin/f.rs"

[dependencies]

[dev-dependencies]
