[package]
name = "contest1825"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1825-a = { alias = "a", problem = "https://codeforces.com/contest/1825/problem/A" }
contest1825-b = { alias = "b", problem = "https://codeforces.com/contest/1825/problem/B" }
contest1825-c = { alias = "c", problem = "https://codeforces.com/contest/1825/problem/C" }
contest1825-d1 = { alias = "d1", problem = "https://codeforces.com/contest/1825/problem/D1" }
contest1825-d2 = { alias = "d2", problem = "https://codeforces.com/contest/1825/problem/D2" }
contest1825-e = { alias = "e", problem = "https://codeforces.com/contest/1825/problem/E" }

[[bin]]
name = "contest1825-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1825-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1825-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1825-d1"
path = "src/bin/d1.rs"

[[bin]]
name = "contest1825-d2"
path = "src/bin/d2.rs"

[[bin]]
name = "contest1825-e"
path = "src/bin/e.rs"

[dependencies]

[dev-dependencies]
