[package]
name = "contest1827"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1827-a = { alias = "a", problem = "https://codeforces.com/contest/1827/problem/A" }
contest1827-b1 = { alias = "b1", problem = "https://codeforces.com/contest/1827/problem/B1" }
contest1827-b2 = { alias = "b2", problem = "https://codeforces.com/contest/1827/problem/B2" }
contest1827-c = { alias = "c", problem = "https://codeforces.com/contest/1827/problem/C" }
contest1827-d = { alias = "d", problem = "https://codeforces.com/contest/1827/problem/D" }
contest1827-e = { alias = "e", problem = "https://codeforces.com/contest/1827/problem/E" }
contest1827-f = { alias = "f", problem = "https://codeforces.com/contest/1827/problem/F" }

[[bin]]
name = "contest1827-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1827-b1"
path = "src/bin/b1.rs"

[[bin]]
name = "contest1827-b2"
path = "src/bin/b2.rs"

[[bin]]
name = "contest1827-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1827-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1827-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1827-f"
path = "src/bin/f.rs"

[dependencies]

[dev-dependencies]
