[package]
name = "contest1830"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1830-a = { alias = "a", problem = "https://codeforces.com/contest/1830/problem/A" }
contest1830-b = { alias = "b", problem = "https://codeforces.com/contest/1830/problem/B" }
contest1830-c = { alias = "c", problem = "https://codeforces.com/contest/1830/problem/C" }
contest1830-d = { alias = "d", problem = "https://codeforces.com/contest/1830/problem/D" }
contest1830-e = { alias = "e", problem = "https://codeforces.com/contest/1830/problem/E" }
contest1830-f = { alias = "f", problem = "https://codeforces.com/contest/1830/problem/F" }

[[bin]]
name = "contest1830-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1830-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1830-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1830-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1830-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1830-f"
path = "src/bin/f.rs"

[dependencies]

[dev-dependencies]
