[package]
name = "contest1838"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest1838-a = { alias = "a", problem = "https://codeforces.com/contest/1838/problem/A" }
contest1838-b = { alias = "b", problem = "https://codeforces.com/contest/1838/problem/B" }
contest1838-c = { alias = "c", problem = "https://codeforces.com/contest/1838/problem/C" }
contest1838-d = { alias = "d", problem = "https://codeforces.com/contest/1838/problem/D" }
contest1838-e = { alias = "e", problem = "https://codeforces.com/contest/1838/problem/E" }
contest1838-f = { alias = "f", problem = "https://codeforces.com/contest/1838/problem/F" }

[[bin]]
name = "contest1838-a"
path = "src/bin/a.rs"

[[bin]]
name = "contest1838-b"
path = "src/bin/b.rs"

[[bin]]
name = "contest1838-c"
path = "src/bin/c.rs"

[[bin]]
name = "contest1838-d"
path = "src/bin/d.rs"

[[bin]]
name = "contest1838-e"
path = "src/bin/e.rs"

[[bin]]
name = "contest1838-f"
path = "src/bin/f.rs"

[dependencies]

[dev-dependencies]
